--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy-dev:
     runs-on: ubuntu-latest
-    environment: development
+    environment: dev
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -21,7 +21,7 @@ jobs:
   deploy-staging:
     needs: deploy-dev
     runs-on: ubuntu-latest
-    environment: staging
+    environment: stg
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -33,7 +33,7 @@ jobs:
 
   deploy-production:
     needs: deploy-dev
-    environment: production
+    environment: prod
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
